# gtkmmSandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp  main.glade
inc/gtkMmSandbox/: MainViewController.hpp  ViewController.hpp
src/: CMakeLists.txt  MainViewController.cpp
